# todolist

./: .gitignore  CMakeLists.txt  README.md  entry.cc  entry.h  list.h  main.cc  mainqt.cc  table.cc  table.h  test.cc  window.cc  window.h
.circleci/: config.yml
data/: todo.txt
tests/: CMakeLists.txt  todo_test.cc
